fix(genome_statistics): fix gfastats prefix

--- a/subworkflows/sanger-tol/genome_statistics/tests/fastk.config
+++ b/subworkflows/sanger-tol/genome_statistics/tests/fastk.config
@@ -4,4 +4,8 @@ process {
     withName: FASTK_FASTK {
         ext.args = { "${params.fastk_args}" }
     }
+
+    withName: GFASTATS {
+        ext.prefix = { "${assembly.getName()}" }
+    }
 }
