--- a/subworkflows/sanger-tol/genome_statistics/tests/no_fastk.config
+++ b/subworkflows/sanger-tol/genome_statistics/tests/no_fastk.config
@@ -1,1 +1,7 @@
 nextflow.enable.moduleBinaries = true
+
+process {
+    withName: GFASTATS {
+        ext.prefix = { "${assembly.getName()}" }
+    }
+}
