--- a/subworkflows/sanger-tol/pacbio_preprocess/meta.yml
+++ b/subworkflows/sanger-tol/pacbio_preprocess/meta.yml
@@ -9,6 +9,8 @@ keywords:
 components:
   - blast/blastn:
       git_remote: https://github.com/nf-core/modules.git
+  - blast/makeblastdb:
+      git_remote: https://github.com/nf-core/modules.git
   - hifitrimmer/processblast:
       git_remote: https://github.com/nf-core/modules.git
   - hifitrimmer/filterbam:
