--- a/subworkflows/sanger-tol/pacbio_preprocess/tests/nextflow.config
+++ b/subworkflows/sanger-tol/pacbio_preprocess/tests/nextflow.config
@@ -4,6 +4,10 @@ process {
         ext.args = { "${params.blastn_args}" }
     }
 
+    withName: 'BLAST_MAKEBLASTDB' {
+        ext.args = { "${params.makeblastdb_args}" }
+    }
+
     withName: FQ2CRAM_TRIM {
         ext.args = { "${params.fq2cram_args}" }
     }
