--- a/subworkflows/sanger-tol/pacbio_preprocess/meta.yml
+++ b/subworkflows/sanger-tol/pacbio_preprocess/meta.yml
@@ -31,8 +31,6 @@ components:
       git_remote: https://github.com/nf-core/modules.git
   - tabix/bgzip:
       git_remote: https://github.com/nf-core/modules.git
-  - untar:
-      git_remote: https://github.com/nf-core/modules.git
 
 input:
   - ch_reads:
@@ -47,17 +45,25 @@ input:
         Input channel containing YAML file for HiFiTrimmer adapter trimming.
         Structure: [ val(meta), path(yaml) ]
       pattern: "*.yaml"
-  - adapter_db:
+  - val_adapter_fasta:
       type: file
       description: |
         Adapter database for BLASTN adapter detection.
       pattern: "*.tar.gz"
-  - uli_primers:
+  - val_uli_primers:
       type: file
       description: |
         ULI primer FASTA file used by LIMA for barcode demultiplexing.
         Provide a primer FASTA to enable demultiplexing, or an empty channel to skip.
       pattern: "*.fasta|*.fa"
+  - val_pbmarkdup:
+      type: boolean
+      description: |
+        Whether to run pbmarkdup for duplicate marking.
+  - val_output_format:
+      type: string
+      description: |
+        Output format: 'cram' or 'fastx' ( default: 'fastx').
 
 output:
   - fastx:
