--- a/subworkflows/sanger-tol/fasta_10x_polishing_longranger_freebayes/tests/nextflow.config
+++ b/subworkflows/sanger-tol/fasta_10x_polishing_longranger_freebayes/tests/nextflow.config
@@ -1,48 +1,48 @@
 process {
-    withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:BCFTOOLS_CONSENSUS' {
+    withName: 'FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:BCFTOOLS_CONSENSUS' {
         // Filter by mapping quality, keep alt-alt het and alt-alt hom,
         // keep longer allele
         ext.args = '-i\'QUAL>1 && (GT="AA" || GT="Aa")\' -Hla'
         ext.prefix = { "${meta.id}.consensus"   }
     }
 
-    withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:BCFTOOLS_INDEX_FB' {
+    withName: 'FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:BCFTOOLS_INDEX_FB' {
         ext.prefix = { "${meta.id}.${meta.chunk_id}" }
         ext.args   = { "--tbi" }
     }
 
-    withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:BCFTOOLS_INDEX_NORM' {
+    withName: 'FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:BCFTOOLS_INDEX_NORM' {
         ext.prefix = { "${meta.id}.${meta.chunk_id}" }
         ext.args   = { "--tbi" }
     }
 
-    withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:BCFTOOLS_NORM' {
+    withName: 'FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:BCFTOOLS_NORM' {
         ext.prefix = { "${meta.id}.normalised"  }
         ext.args = '--no-version'
     }
 
-    withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:BCFTOOLS_SORT' {
+    withName: 'FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:BCFTOOLS_SORT' {
         ext.prefix = { "${meta.id}.${meta.chunk_id}_sorted" }
         scratch = true
     }
 
-    withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:BCFTOOLS_VIEW' {
+    withName: 'FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:BCFTOOLS_VIEW' {
         ext.prefix = { "${meta.id}.${meta.chunk_id}_view" }
         // Dont keep command line information, keep reference allele or
         // suggested alternative if reference is N
         ext.args = '--no-version -e\'type="ref"||REF~"N"\''
     }
 
-    withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:FREEBAYES' {
+    withName: 'FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:FREEBAYES' {
         ext.prefix = { "${meta.id}" }
         ext.args   = { "--skip-coverage ${meta.longranger_cov}" }
     }
 
-    withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:GATK4_MERGEVCFS' {
+    withName: 'FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:GATK4_MERGEVCFS' {
         ext.prefix = { "${meta.id}.merged" }
     }
 
-    withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:LONGRANGER_ALIGN' {
+    withName: 'FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:LONGRANGER_ALIGN' {
         // Internally accessible to for Sanger only
         container = { env('GITHUB_ACTION') ?
             "ghcr.io/sanger-tol/longranger:2.2.2-c5" :
@@ -52,7 +52,7 @@ process {
         ext.args = "--disable-ui --nopreflight"
     }
 
-    withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:LONGRANGER_MKREF' {
+    withName: 'FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:LONGRANGER_MKREF' {
         // Internally accessible to for Sanger only
         container = { env('GITHUB_ACTION') ?
             "ghcr.io/sanger-tol/longranger:2.2.2-c5" :
@@ -62,7 +62,7 @@ process {
         ext.args = "--disable-ui --nopreflight"
     }
 
-    withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:SEPARATE_HAPLOTYPES' {
+    withName: 'FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:SEPARATE_HAPLOTYPES' {
         ext.prefix = { "${meta.id}.${meta._hap}" }
         ext.args   = {
             def hap1_pattern = '^h1tg|^ptg'
