test: update snapshots

--- a/subworkflows/sanger-tol/fasta_10x_polishing_longranger_freebayes/tests/nextflow.config
+++ b/subworkflows/sanger-tol/fasta_10x_polishing_longranger_freebayes/tests/nextflow.config
@@ -68,7 +68,7 @@ process {
             def hap1_pattern = '^h1tg|^ptg'
             def search_type = meta._hap == "hap1" ? "-rp" : "-rvp"
 
-            return "${search_type} ${hap1_pattern}"
+            return "\"${search_type} ${hap1_pattern}\""
         }
     }
 
