fix: fix grouping

--- a/subworkflows/sanger-tol/fasta_10x_polishing_longranger_freebayes/nextflow.config
+++ b/subworkflows/sanger-tol/fasta_10x_polishing_longranger_freebayes/nextflow.config
@@ -49,10 +49,16 @@ process {
     withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:SEPARATE_HAPLOTYPES' {
         ext.prefix = { "${meta.id}.${meta._hap}" }
         ext.args   = {
-            def hap1_pattern = '^h1tg|^ptg'
-            def search_type = meta._hap == "hap1" ? "-rp" : "-rvp"
+            // Generate an index of haps and their contig prefixes
+            def hap_patterns = (1.._nhaps).collectEntries { n ->
+                def pattern = "^h${n}tg"
+                if (n == 1) pattern = "${pattern}|^ptg"
+                else if (n == 2) pattern = "${pattern}|^atg"
 
-            return "${search_type} ${hap1_pattern}"
+                return ["hap${n}", pattern]
+            }
+
+            return "-rp ${hap_patterns[meta._hap]}"
         }
     }
 
