test: update snapshots

--- a/subworkflows/sanger-tol/fasta_10x_polishing_longranger_freebayes/tests/nextflow.config
+++ b/subworkflows/sanger-tol/fasta_10x_polishing_longranger_freebayes/tests/nextflow.config
@@ -62,19 +62,19 @@ process {
         ext.args = "--disable-ui --nopreflight"
     }
 
-    withName: '.*:FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:SEPARATE_HAPLOTYPES' {
+    withName: 'FASTA_10X_POLISHING_LONGRANGER_FREEBAYES:SEPARATE_HAPLOTYPES' {
         ext.prefix = { "${meta.id}.${meta._hap}" }
         ext.args   = {
             // Generate an index of haps and their contig prefixes
-            def hap_patterns = (1.._nhaps).collectEntries { n ->
+            def hap_patterns = (1..meta._nhaps).collectEntries { n ->
                 def pattern = "^h${n}tg"
                 if (n == 1) pattern = "${pattern}|^ptg"
                 else if (n == 2) pattern = "${pattern}|^atg"
 
-                return ["hap${n}", pattern]
+                return ["hap" + n, pattern]
             }
 
-            return "-rp ${hap_patterns[meta._hap]}"
+            return "-rp '${hap_patterns[meta._hap]}'"
         }
     }
 
