--- a/subworkflows/sanger-tol/pacbio_preprocess/meta.yml
+++ b/subworkflows/sanger-tol/pacbio_preprocess/meta.yml
@@ -25,8 +25,6 @@ components:
       git_remote: https://github.com/nf-core/modules.git
   - samtools/import:
       git_remote: https://github.com/nf-core/modules.git
-  - samtools/view:
-      git_remote: https://github.com/nf-core/modules.git
   - seqkit/fq2fa:
       git_remote: https://github.com/nf-core/modules.git
 
@@ -58,10 +56,6 @@ input:
       type: boolean
       description: |
         Whether to run pbmarkdup for duplicate marking.
-  - val_output_format:
-      type: string
-      description: |
-        Output format: 'cram' or 'fastx' ( default: 'fastx').
 
 output:
   - untrimmed_fastx:
@@ -76,22 +70,16 @@ output:
         Channel containing preprocessed reads that have been filtered/trimmed with hifitrimmer in FASTA/FASTQ format.
         Structure: [ val(meta), path(fasta/fastq) ]
       pattern: "*.fasta|*.fa|*.fastq|*.fq"
-  - untrimmed_cram:
+  - untrimmed_bam:
       type: file
       description: |
-        Channel containing preprocessed reads that are not filtered/trimmed with hifitrimmer in CRAM format.
-        Structure: [ val(meta), path(cram) ]
-      pattern: "*.cram"
-  - trimmed_cram:
-      type: file
-      description: |
-        Channel containing preprocessed reads that have been filtered/trimmed with hifitrimmer in CRAM format.
-        Structure: [ val(meta), path(cram) ]
-      pattern: "*.cram"
+        Channel containing preprocessed reads that are not filtered/trimmed with hifitrimmer in BAM format.
+        Structure: [ val(meta), path(bam) ]
+      pattern: "*.bam"
   - lima_report:
       type: file
       description: |
-        LIMA demultiplexing reports (if uli_primers).
+        LIMA demultiplexing reports (if val_uli_primers).
         Structure: [ val(meta), path(report) ]
       pattern: "*.report.csv"
   - lima_summary:
