--- a/modules/sanger-tol/cramalign/gencramchunks/meta.yml
+++ b/modules/sanger-tol/cramalign/gencramchunks/meta.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "CRAMALIGN_GENCRAMCHUNKS"
 description: Determine the chunks to split a CRAM file into for alignment
 keywords:
