--- a/modules/sanger-tol/fastxalign/pyfastxindex/meta.yml
+++ b/modules/sanger-tol/fastxalign/pyfastxindex/meta.yml
@@ -1,4 +1,3 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "fastxalign_pyfastxindex"
 description: |
   Index a FASTx file using pyfastx to enable random access to a slice of reads in the file. Also returns
@@ -15,7 +14,8 @@ tools:
         from plain and gzipped FASTA/Q files. This module aims to provide simple APIs for users to extract
         seqeunce from FASTA and reads from FASTQ by identifier and index number.
       homepage: "https://github.com/lmdu/pyfastx"
-      licence: ["MIT"]
+      licence:
+        - "MIT"
       identifier: ""
 input:
   - - meta:
@@ -28,7 +28,8 @@ input:
         description: FASTx file of reads to index
         pattern: "*.{fasta,fa,fasta.gz,fa.gz,fq,fq.gz}"
         ontologies:
-          - edam: "http://edamontology.org/format_2546" # FASTA-like
+          - edam: "http://edamontology.org/format_2546"
+          - edam: http://edamontology.org/format_1930
 output:
   index:
     - - meta:
@@ -41,12 +42,34 @@ output:
           description: FASTx file of reads to index
           pattern: "*.{fasta,fa,fasta.gz,fa.gz,fq,fq.gz}"
           ontologies:
-            - edam: "http://edamontology.org/format_2546" # FASTA-like
+            - edam: "http://edamontology.org/format_2546"
+            - edam: http://edamontology.org/format_1930
       - "*.fxi":
           type: file
           description: pyfastx-format FASTA index file
           pattern: "*.fxi"
           ontologies: []
+  versions_slice_fasta:
+    - - ${task.process}:
+          type: string
+          description: The name of the process
+      - slice_fasta.py:
+          type: string
+          description: The name of the tool
+      - slice_fasta.py --version:
+          type: eval
+          description: The expression to obtain the version of the tool
+topics:
+  versions:
+    - - ${task.process}:
+          type: string
+          description: The name of the process
+      - slice_fasta.py:
+          type: string
+          description: The name of the tool
+      - slice_fasta.py --version:
+          type: eval
+          description: The expression to obtain the version of the tool
 authors:
   - "@prototaxites"
 maintainers:
