--- a/modules/sanger-tol/fastxalign/pyfastxindex/meta.yml
+++ b/modules/sanger-tol/fastxalign/pyfastxindex/meta.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "fastxalign_pyfastxindex"
 description: |
   Index a FASTx file using pyfastx to enable random access to a slice of reads in the file. Also returns
