--- a/subworkflows/sanger-tol/pacbio_preprocess/meta.yml
+++ b/subworkflows/sanger-tol/pacbio_preprocess/meta.yml
@@ -7,8 +7,7 @@ keywords:
   - adapter-trimming
   - duplicate-marking
 components:
-  - blast/blastn:
-      git_remote: https://github.com/nf-core/modules.git
+  - blast/blastn
   - blast/makeblastdb:
       git_remote: https://github.com/nf-core/modules.git
   - hifitrimmer/processblast:
@@ -18,14 +17,6 @@ components:
   - lima:
       git_remote: https://github.com/nf-core/modules.git
   - pbmarkdup:
-      git_remote: https://github.com/nf-core/modules.git
-  - samtools/fasta:
-      git_remote: https://github.com/nf-core/modules.git
-  - samtools/fastq:
-      git_remote: https://github.com/nf-core/modules.git
-  - samtools/import:
-      git_remote: https://github.com/nf-core/modules.git
-  - seqkit/fq2fa:
       git_remote: https://github.com/nf-core/modules.git
 
 input:
