Apply suggestions from code review

--- a/modules/sanger-tol/bedtools/bamtobedsort/meta.yml
+++ b/modules/sanger-tol/bedtools/bamtobedsort/meta.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "bedtools_bamtobedsort"
 description: |
   Streams a BAM file into bedtools bamToBed with samtools (with optional filtering), then sorts
