--- a/modules/sanger-tol/longranger/mkref/meta.yml
+++ b/modules/sanger-tol/longranger/mkref/meta.yml
@@ -7,12 +7,16 @@ keywords:
   - reference
 tools:
   - longranger:
-      description: Long Ranger is a set of analysis pipelines that processes Chromium sequencing output to align reads and call and phase SNPs, indels, and structural variants.
+      description: Long Ranger is a set of analysis pipelines that processes
+        Chromium sequencing output to align reads and call and phase SNPs, indels,
+        and structural variants.
       homepage: https://support.10xgenomics.com/genome-exome/software/pipelines/latest/what-is-long-ranger
       documentation: https://support.10xgenomics.com/genome-exome/software/pipelines/latest/what-is-long-ranger
       tool_dev_url: https://github.com/10XGenomics/longranger
       doi: no DOI available
-      licence: ["https://support.10xgenomics.com/genome-exome/software/downloads/latest"]
+      licence:
+        - "https://support.10xgenomics.com/genome-exome/software/downloads/latest"
+      identifier: ""
 input:
   - - meta:
         type: map
@@ -23,6 +27,7 @@ input:
         type: file
         description: Genome reference
         pattern: "*.{fa,fasta}"
+        ontologies: []
 output:
   reference:
     - - meta:
@@ -30,15 +35,32 @@ output:
           description: |
             Groovy Map containing sample information
             e.g. `[ id:'sample1' ]`
-      - "refdata-*":
+      - refdata-*:
           type: file
           description: BAM file of mapped Hi-C sequences
           pattern: "refdata-*"
+          ontologies: []
+  versions_longranger:
+    - - ${task.process}:
+          type: string
+          description: The name of the process
+      - longranger:
+          type: string
+          description: The name of the tool
+      - longranger align --version | sed '1!d;s/.*(\(.*\)).*/\1/':
+          type: eval
+          description: The expression to obtain the version of the tool
+topics:
   versions:
-    - "versions.yml":
-        type: file
-        description: File containing software versions
-        pattern: "versions.yml"
+    - - ${task.process}:
+          type: string
+          description: The name of the process
+      - longranger:
+          type: string
+          description: The name of the tool
+      - longranger align --version | sed '1!d;s/.*(\(.*\)).*/\1/':
+          type: eval
+          description: The expression to obtain the version of the tool
 authors:
   - "@ksenia-krasheninnikova"
   - "@prototaxites"
