Renamed the module to fit a new nomenclature that will include SOFTMASK2BED

--- a/modules/sanger-tol/mask/unmask/meta.yml
+++ b/modules/sanger-tol/mask/unmask/meta.yml
@@ -1,4 +1,4 @@
-name: "unmask"
+name: mask_unmask
 description: |
   Remove all soft-masking from a Fasta file by turning all lower-case
   sequence characters to upper case.
