Added support for compressed files

--- a/modules/sanger-tol/mask/softmask2bed/meta.yml
+++ b/modules/sanger-tol/mask/softmask2bed/meta.yml
@@ -28,7 +28,7 @@ input:
     - fasta:
         type: file
         description: Soft-masked Fasta file
-        pattern: "*.{fa,fasta}"
+        pattern: "*.{fa,fasta}(.gz)?"
         ontologies:
           - edam: "http://edamontology.org/format_1929" # FASTA
 output:
