The general config file must not hardcode BED

--- a/subworkflows/sanger-tol/tsv_compress_index/nextflow.config
+++ b/subworkflows/sanger-tol/tsv_compress_index/nextflow.config
@@ -1,11 +1,17 @@
 process {
     withName: TABIX_BGZIP {
+        // To get the .gzi index created
         ext.args = "-i"
     }
     withName: TABIX_TABIX_CSI {
-        ext.args = "--preset bed --csi"
+        // --csi is the minimum needed
+        ext.args = "--csi"
+        // Add --preset or --sequence/--begin/--end to match the actual TSV file, e.g.
+        // ext.args = "--preset bed --csi"
     }
     withName: TABIX_TABIX_TBI {
-        ext.args = "--preset bed"
+        // No --tbi because TBI is the default format
+        // Set --preset or --sequence/--begin/--end to match the actual TSV file, e.g.
+        // ext.args = "--preset bed"
     }
 }
