Added missing bgxip

--- a/modules/sanger-tol/bgziptabix/meta.yml
+++ b/modules/sanger-tol/bgziptabix/meta.yml
@@ -10,13 +10,20 @@ keywords:
   - tabix
   - vcf
 tools:
+  - bgzip:
+      description: |
+        Bgzip compresses or decompresses files in a similar manner to, and compatible with, gzip.
+      homepage: https://www.htslib.org/doc/tabix.html
+      documentation: http://www.htslib.org/doc/bgzip.html
+      doi: 10.1093/bioinformatics/btp352
+      licence: ["MIT"]
+      identifier: biotools:tabix
   - tabix:
       description: Generic indexer for TAB-delimited genome position files.
       homepage: https://www.htslib.org/doc/tabix.html
       documentation: https://www.htslib.org/doc/tabix.1.html
       doi: 10.1093/bioinformatics/btq671
-      licence:
-        - "MIT"
+      licence: ["MIT"]
       identifier: biotools:tabix
 input:
   - - meta:
